根元素选择器、伪类选择器、伪元素选择器、属性选择器、动态伪类选择器、

--- a/CSS選擇器上.css
+++ b/CSS選擇器上.css
@@ -94,12 +94,13 @@
 } */
 
 /*相邻兄弟选择器*/
+/* 相邻兄弟选择器，可选择紧接在另一元素后的元素，且二者有相同父元素 */
 /* p+b{
     color: maroon;
 } */
 
-/*普通兄弟选择器 CSS3*/
-/*普通兄弟选择器匹配到第一个元素后面的所有元素*/
+/*后续兄弟选择器 CSS3*/
+/*后续兄弟选择器选取所有指定元素之后的相邻兄弟元素。*/
 /* p~b{
     color:yellow;
 } */
