--- a/CSS盒模型下.css
+++ b/CSS盒模型下.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-div{
+/*div{
     background: silver;
     width: 200px;
     height: 200px;
@@ -13,16 +13,100 @@ div{
     /* 元素不可见,但会占据空间 */
     /* visibility: hidden; */
 
-    /* visibility:collapse; */
+    /* visibility:collapse; 
 
-}
+}*/
 
-table tr:first-child{
+/* table tr:first-child{
     /* visibility: hidden; */
 
-    /* 元素不可见,隐藏表格的行与列,如果不是表格,则和hidden一样. */
+    /* 元素不可见,隐藏表格的行与列,如果不是表格,则和hidden一样. 
     visibility:collapse;
-}
+} */
 
 /* 元素盒类型 CSS盒模型中的display属性可以更改元素本身盒类型 */
 /* 盒类型主要有: 1.块级元素(区块),2.行内元素(内联),3.行内-块级元素(内联块),4.隐藏元素 */
+
+/* 块级元素 */
+/* div{
+    background: silver;
+    width: 200px;
+    height: 200px;
+} */
+
+/* 行内元素 */
+/* span{
+    background: silver;
+    width: 200px;
+    height: 200px;
+} */
+
+/* 内联-块 */
+/* img{
+    width: 100px;
+    height: 50px;
+} */
+
+/* 块级元素转成行内元素 */
+/* div{
+    background: silver;
+    width: 200px;
+    height: 200px;
+    display: inline;
+} */
+
+/* span{
+    background: silver;
+    width: 200px;
+    height: 200px;
+    display: block;
+} */
+
+/* 行内块元素 */
+/* div,span{
+    background: silver;
+    width: 200px;
+    height: 200px;
+    display: inline-block;
+} */
+
+/* 盒子不可见不占位 */
+/* span{
+    display: none;
+} */
+
+div{
+    width: 200px;
+    height: 200px;
+}
+
+/* #a{
+    background: maroon;
+    float: left;
+}
+#b{
+    background: green;
+    /* margin-left: 20px; 
+    float: left;
+}
+
+#c{
+    background:blue;
+    float: left;
+}
+
+#d{
+    background: orange;
+    height: 300px;
+    float: left;
+} */
+
+ #a{
+    background: maroon;
+    float: left;
+}
+#b{
+    background: green;
+    /* margin-left: 20px; */
+    clear: none;
+} 
