更新CSS边框与背景

--- a/CSS边框与背景下.css
+++ b/CSS边框与背景下.css
@@ -1,45 +1,67 @@
 @charset "utf-8";
-html{
+html {
     height: 100%;
 }
-body{
+
+body {
     /* background-color: silver; */
-
     /* 背景图片的用法 */
-     background-image: url(little.jpg);
+    /* background-image: url(little.jpg); */
     /* background-image: none;  */
-
     /* 背景水平平铺 */
     /* background-repeat: repeat-x; */
-
     /* 背景垂直平铺 */
     /* background-repeat: repeat-y; */
-
     /* 背景水平和垂直都平铺，默认值 */
     /* background-repeat: repeat; */
-
     /* 禁止水平和垂直平铺，显示一张图片 */
-    background-repeat: no-repeat;
-
+    /* background-repeat: no-repeat; */
     /* background-position: top; */
-
+    /* 背景图片等比例缩放,使图像至少覆盖容器，但有可能超出容器 */
+    /* background-size: cover; */
     /* 通过html设置100%可以让图片定位在网页的底部 */
     /* background-position: bottom; */
-
     /* background-position: center; */
-
     /* 组合方式  */
     /* background-position: top right; */
-
     /* 左下角 */
     /* background-position: left bottom; */
+    /* 百分比显示 */
+    /* background-size: 100%; */
+     /* background-size: cover; */
+
+     /* background-attachment:scroll; */
+
+     /* background-attachment: fixed; */
 
 }
-div{
+
+div {
     width: 500px;
-    height: 300px;
+    height: 500px;
     /* background-color: orange; */
-    
+    background-image: url(center.jpg);
+    background-repeat: no-repeat;
+
+    border: 10px dashed red;
+    padding: 50px;
+    background-origin:padding-box;
+    /* background: silver url(center.jpg) no-repeat top left /100% border-box content-box; */
+    /* background: silver url(center.jpg) no-repeat scroll left top/100% border-box content-box */
+
+    /* background-origin: border-box;
+    background-origin: padding-box; */
+
+    /* background-clip: border-box; */
+    /* background-clip: padding-box; */
+    /* background-clip: content-box; */
+    /* 图片默认大小 */
+    /* background-size: auto; */
+    /* 等比例缩放 */
+    /* background-size: cover; */
+    /* 等比例缩放图像，使其宽度、高度中比较大者与容器横向或纵向重合 */
+    /* background-size: contain; */
+    /* background-size: 200px 200px; */
 }
 
 /* div b{
@@ -49,6 +71,7 @@ div{
 /* 解释：默认值为 transpartent，为透明的意思。这样<div>内部的元素就会继承<div>的背景色
     一般来说这个属性使用频率很低，原因是不需要改变色彩时就默认，需要改变颜色时又是颜色值。
  */
+
 /* div b:first-child{
     background-color: transparent;
 } */
