--- a/CSS其他样式.css
+++ b/CSS其他样式.css
@@ -12,4 +12,10 @@ div{
     /* opacity: 0.1; */
 
     border: 10px solid green;
+
+    /* box-shadow: 10px 10px 5px 2px gray inset; */
+    outline:5px double red;
+
+    /* 鼠标指针样式 */
+    cursor:move;
 }
