--- a/CSS3文本效果.css
+++ b/CSS3文本效果.css
@@ -1,5 +1,51 @@
 @charset "utf-8";
 
 p{
-    font-size: 50px;
+    /* font-size: 50px; */
+    /* text-shadow: 1px 1px 1px red; */
+
+    /* text-shadow: -1px -1px 1px red; */
+
+    /* 叠加实现特殊阴影效果 */
+    /* text-shadow:0px 0px 0 rgb(188,178,188),
+            1px 0px 0 rgb(173,163,173),
+            2px 0px 0 rgb(157,147,157),
+            3px 0px 0 rgb(142,132,142),
+            4px 0px 0 rgb(126,116,126),
+            5px 0px 0 rgb(111,101,111),
+            6px 0px 0 rgb(95,85,95),
+            7px 0px 0 rgb(79,69,79),
+            8px 0px 7px rgba(0,0,0,0.35),
+            8px 0px 1px rgba(0,0,0,0.25),
+            0px 0px 7px rgba(0,0,0,0.2); */
+            /* width: 160px; */
+            /* background: silver;
+            white-space: nowrap;
+            overflow: hidden; */
+
+            /* 默认值，文本裁剪时不添加 省略号  */
+            /* text-overflow: clip; */
+
+            /* 兼容低版本 opera浏览器 */
+            /* -o-text-overflow: ellipsis; */
+
+            /* 文本裁剪时添加省略号 */
+            /* text-overflow: ellipsis; */
+
+            font-size: 80px;
+
+            /* 文本描边 */
+            /* -webkit-text-stroke: 1px red;
+            -webkit-text-stroke-width: 3px;
+            -webkit-text-stroke-color:orange; */
+            /* color:orange; */
+            /* -webkit-text-fill-color: orange; */
+
+            font-family: 黑体;
+
+            background:
+            -webkit-linear-gradient(top,#eee,#aaa 50%,#333 51%,#000);
+            -webkit-background-clip:text;
+            /* 文本填充设为透明 */
+            -webkit-text-fill-color:transparent;
 }
