CSS布局 resize 、绝对定位

--- a/CSS传统布局下.css
+++ b/CSS传统布局下.css
@@ -3,16 +3,24 @@ body{
     margin: 100px;
     height: 800px;
     border:1px solid red;
+    /* 在 body 父元素设置一个不需要 top 和 left 定位的相对定位，这个叫做设置参考点*/
+    position: relative;
 }
 
 header{
     width: 100px;
     height: 100px;
     background-color: silver;
+    /*position: fixed;
+    top: 0;
+    left: 0; */
     /* position: absolute;
     top:0;
     left:0;
     z-index: 1; */
+    position: absolute;
+    top:100px;
+    left: 10px;
 }
 /* aside{
     width: 100px;
